--- a/Surreality/Main.storyboard
+++ b/Surreality/Main.storyboard
@@ -207,18 +207,6 @@
                                     <action selector="newStackActionBtn:" destination="Cot-0o-SSg" id="5ZK-Is-TWK"/>
                                 </connections>
                             </barButtonItem>
-                            <barButtonItem enabled="NO" title="SingleStackInput" image="photo.on.rectangle" catalog="system" id="DNZ-Fo-A93" userLabel="SingleStackInput">
-                                <color key="tintColor" systemColor="systemGrayColor"/>
-                                <connections>
-                                    <action selector="singleStackInputClick:" destination="Cot-0o-SSg" id="21R-OR-6TL"/>
-                                </connections>
-                            </barButtonItem>
-                            <barButtonItem title="SingleFilterOutput" image="chart.bar.doc.horizontal" catalog="system" id="qg6-ta-8bA" userLabel="SingleFilterOutput">
-                                <color key="tintColor" systemColor="systemGrayColor"/>
-                                <connections>
-                                    <action selector="singleFilterOutputClick:" destination="Cot-0o-SSg" id="xx0-gX-V80"/>
-                                </connections>
-                            </barButtonItem>
                         </rightBarButtonItems>
                     </navigationItem>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
@@ -229,8 +217,6 @@
                         <outlet property="parmSlider" destination="zCg-lU-rqI" id="iU8-Va-3cX"/>
                         <outlet property="rightTintView" destination="6Ki-pV-gkl" id="pC4-6T-dRi"/>
                         <outlet property="saveBtn" destination="tZ1-Mv-wLR" id="52D-M2-Irf"/>
-                        <outlet property="singleFilterOutputBtn" destination="qg6-ta-8bA" id="VwN-7Y-BI3"/>
-                        <outlet property="singleStackInput" destination="DNZ-Fo-A93" id="J7m-s0-9qS"/>
                         <outlet property="topTintView" destination="WIG-ES-l8C" id="4WK-Ii-zR6"/>
                         <outletCollection property="sliders" destination="xpj-gS-MzU" collectionClass="NSMutableArray" id="DVW-U3-NZP"/>
                         <outletCollection property="sliders" destination="a5o-Sr-vCZ" collectionClass="NSMutableArray" id="RjS-RG-r5F"/>
@@ -844,11 +830,11 @@
                                 <rect key="frame" x="0.0" y="28" width="551" height="43.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="yOX-Yb-noN" id="KAe-B8-bgl">
-                                    <rect key="frame" x="0.0" y="0.0" width="489.5" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="524" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="jaH-Rx-fdN">
-                                            <rect key="frame" x="15" y="0.0" width="466.5" height="43.5"/>
+                                            <rect key="frame" x="16" y="0.0" width="500" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
@@ -883,6 +869,13 @@
                     </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="htE-YV-6eQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="7Bl-Rc-WWJ">
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                    <items>
+                        <barButtonItem title="Item" id="ZrX-iX-deQ"/>
+                    </items>
+                </toolbar>
             </objects>
             <point key="canvasLocation" x="-185" y="23"/>
         </scene>
@@ -936,7 +929,6 @@
         <image name="folder" catalog="system" width="128" height="97"/>
         <image name="folder.badge.plus" catalog="system" width="128" height="91"/>
         <image name="minus.circle.fill" catalog="system" width="128" height="121"/>
-        <image name="photo.on.rectangle" catalog="system" width="128" height="96"/>
         <image name="plus.circle.fill" catalog="system" width="128" height="121"/>
         <image name="rectangle.grid.1x2" catalog="system" width="128" height="101"/>
         <image name="square.and.arrow.down.on.square" catalog="system" width="122" height="128"/>
